fix(friends_content.css): add fixed heights for chat related containers; fix overflow-y scroll

--- a/frontend/src/css/menu/friends_content.css
+++ b/frontend/src/css/menu/friends_content.css
@@ -176,11 +176,10 @@
 }
 
 #chat-content-container {
-  height: 100%;
+  height: 24rem;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   overflow-y: scroll;
   overflow-x: hidden;
   border-radius: 1rem;
@@ -220,13 +219,14 @@
   flex-direction: column;
   flex-grow: 1;
   gap: 1rem;
-  height: 100%;
+  height: 28rem;
   width: 25rem;
 }
 
 #chat-input-form {
   display: flex;
   align-items: center;
+  height: 3rem;
   width: 100%;
   position: relative;
 }
@@ -274,6 +274,7 @@
   display: flex;
   justify-content: flex-start;
   gap: 0.5rem;
+  height: 100%;
   width: 100%;
   /*margin: 0.5rem 1rem 0.5rem 1rem;*/
 }
